# ZincPass

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  build.yml  compilePass.bat  contributing.md  meson.build  paswords.JSON  primes.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  format.yml
src/: Main.cpp  encrypt.cpp  meson.build  rsa.c
src/accounts/: account.hpp  usrman.cpp
src/encryption/: encrypt.cpp  rsa.c  rsa.h
src/passwords/: passgen.cpp
