project_source_files = [
    'accounts/account.cpp',
    'accounts/userman.cpp',
    'encryption/encryption.cpp',
    'passwords/passgen.cpp'
]



project_dependencies = [
]

inc_dirs = [

]

build_args = [
]
    
project_target = executable(
  'zincpass',
  'main.cpp',
  dependencies : project_dependencies,
  include_directories : inc_dirs,
  install : true,
  cpp_args : build_args,
)